# turing-machines-ocaml

./: .gitignore  .gitlab-ci.yml  README.md  dune-project  tm.opam  todo.md
demo/: dune  main.ml
examples/: bb1.ml  bb2.ml  bb3.ml  bb4.ml  bb5.ml  dune  first.ml  rajdeep.ml
final-tapes/: bb1  bb2  bb3  bb4  bb5
lib/: dune  machine.ml  machine.mli  utils.ml  utils.mli
