(lang dune 3.18)

(name tm)

(generate_opam_files true)

(source
 (gitlab rajdeep-314/turing-machines-ocaml))

(authors "Rajdeep <rajdeep31415@gmail.com>")

(maintainers "Rajdeep <rajdeep31415@gmail.com>")

(license LICENSE)

(documentation https://rajdeep-314.gitlab.io/turing-machines-ocaml)

(package
 (name tm)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
